# SunnyDay

./: .env  .env-example  .env-non-dev-example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  smtp.env
db_data/: README.md  insert_data.sql
docker_scripts/: celery.sh
src/: config.py  database.py  exceptions.py  main.py  utils.py
src/admin/: auth.py  view.py
src/alembic/: env.py
src/alembic/versions/: 2023_04_11_2004-142e0c958122_init_commit.py  2023_04_12_1820-c2eabb59a86c_hotel.py  2023_04_13_2311-913cf35d889d_added_the_tables_booking_room.py  2023_04_14_1844-9265b1343061_init_db.py  2023_04_25_2103-68cad3e4e6cd_init_db.py
src/auth/: auth.py  constants.py  dao.py  dependencies.py  models.py  router.py  schemas.py  usermanager.py  utils.py
src/booking/: dao.py  models.py  router.py  schemas.py
src/dao/: daobase.py
src/exceptions/: __init__.py  db_exceptions.py  http_exceptions.py
src/frontend/pages/: router.py
src/frontend/templates/: base.html  hotels.html
src/frontend/templates/auth/: login.html  register.html
src/frontend/templates/bookings/: booking_successful.html  bookings.html
src/frontend/templates/hotels_and_rooms/: hotels.html  rooms.html
src/hotel/: dao.py  models.py  router.py  schemas.py
src/hotel/room/: dao.py  models.py  router.py  schenas.py
src/hotels/: models.py
src/images/: router.py
src/models/: __init__.py
src/pages/: router.py
src/tasks/: celery.py  email_templates.py  tasks.py
src/templates/: hotel.html
