[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.autoflake]
check = true

[tool.pyright]
include = ["src"]

[tool.poetry]
name = "sunnyday"
version = "0.1.0"
description = ""
authors = ["Oleg Korshunov <oleg.korshunov3000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
asyncpg = {extras = ["sqlalchemy"], version = "^0.27.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
fastapi = {extras = ["all"], version = "^0.95.1"}
flower = "^1.2.0"
celery = "^5.2.7"
pillow = "^9.5.0"
sqladmin = "^0.10.3"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
autoflake = "^2.0.2"
isort = "^5.12.0"
pyright = "^1.1.302"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
